--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <html>
-  <h1>This Izeland</h1>
+  <body tyle="background-color:powderblue;">
+    <h1 style="text-align:right">
+      <font face ="verdana" color="white">
+        This is Izeland
+      </font>
+    </h1>
+  </body>
 </html>
