--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body tyle="background-color:powderblue;">
+  <body style="background-color:powderblue;">
     <h1 style="text-align:right">
       <font face ="verdana" color="white">
         This is Izeland
