--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:powderblue;">
-    <h1 style="text-align:right">
+  <body style="background-color:MidnightBlue;">
+    <h1 style="text-align:center">
       <font face ="verdana" color="white">
         This is Izeland
       </font>
