--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:MidnightBlue;">
+    <h3 style="text-align:right">
+        Cat
+    </h3>
     <h1 style="text-align:center">
       <font face ="verdana" color="white">
-        This is Izeland
+        Izeland
       </font>
     </h1>
+    <h2>
+        Tierra de números
+    </h2>
   </body>
 </html>
