--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <h1 style="text-align:center">
         Izeland
     </h1>
-    <h2>
-        Tierra de números
+    <h2 style="text-align:center">
+        Tierra de números</br>
+        Temporada 1: Ko, la montaña mágica
     </h2>
     </font>    
   </body>
