--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
         Cat
     </h3>
     <h1 style="text-align:center">
-        Izeland
+        Mat Maths, aventuras en Izeland
     </h1>
     <h2 style="text-align:center">
-        Tierra de números</br>
         Temporada 1: Ko, la montaña mágica
     </h2>
     </font>    
