--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
         Cat
     </h3>
     <h1 style="text-align:center">
-        Mat Maths, aventuras en Izeland
+        Mat Maths - Aventuras en Izeland
     </h1>
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
+    <a href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a>
+    <a href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a>
+    <a href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
     </font>    
   </body>
 </html>
