--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         Cat
     </h3>
     <h1 style="text-align:center">
-        Mat Maths - Aventuras en Izeland
+        Las aventuras de Mat Maths en Izeland
     </h1>
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
