--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
-    <a color="white" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a></br>
-    <a href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a></br>
-    <a href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
-    </font>    
+    <h3>Capítulo 1: Vuelo a Twelville</h3>
+    <a style="color:lavender" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a></br>
+    <a style="color:ghostwhite" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a></br>
+    <a style="color:whitesmoke" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
+    <h3>Capítulo 2: La coreografía</h3>
+    <a style="color:beige" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a></br>
+    <a style="color:lightgray" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a></br>
+    <a style="color:gainsboro" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>    
+    <h3>Capítulo 3: Cumpleaños feliz</h3>
+    <a style="color:ivory" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a></br>
+    <a style="color:aliceblue" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a></br>
+    <a style="color:mintcream" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>    </font>    
   </body>
 </html>
