--- a/index.html
+++ b/index.html
@@ -11,18 +11,28 @@
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
-    <h3>Capítulo 1: Vuelo a Twelville</h3>
-    <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a></br>
-    <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a></br>
-    <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
+    <table>
+      <tr>
+      <td>
+      <h3>Capítulo 1: Vuelo a Twelville</h3>
+      <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Acto primero: Embarcando</a></br>
+      <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Acto segundo: Un pasajero muy peludo</a></br>
+      <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
+      </td>
+      <td>
     <h3>Capítulo 2: La coreografía</h3>
     <a style="color:lightgray" style="text-decoration:none;" href="mm2 - La coreografía 1 - Hora del patio.pdf">Acto primero: Hora del patio</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm2 - La coreografía 2 - Reunión clandestina.pdf">Acto segundo: Reunión clandestina</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm2 - La coreografía 3 - Escapar de la fábrica.pdf">Acto final: Escapar de la fábrica</a>    
+      </td>
+      <td>
     <h3>Capítulo 3: Cumpleaños feliz</h3>
     <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 1 - Empieza la fiesta.pdf">Acto primero: Empieza la fiesta</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 2 - La tienda nueva.pdf">Acto segundo: La tienda nueva</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 3 - La primera cita.pdf">Acto final: La primera cita</a>    
+      </td>
+      </tr>
+    </table>
     </font>    
   </body>
 </html>
