--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
+    <div style="text-align:center;">
     <table>
       <tr>
       <td>
@@ -33,6 +34,7 @@
       </td>
       </tr>
     </table>
+    </div>
     </font>    
   </body>
 </html>
