--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Temporada 1: Ko, la montaña mágica
     </h2>
     <div style="text-align:center;">
-    <table>
+    <table border = "1" style="margin: 0 auto;">
       <tr>
       <td>
       <h3>Capítulo 1: Vuelo a Twelville</h3>
