--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
-    <div style="text-align:center;">
-    <table border = "1" style="margin: 0 auto;">
+    <div>
+    <table border = "0" style="margin: 0 auto;">
       <tr>
       <td>
       <h3>Capítulo 1: Vuelo a Twelville</h3>
