--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:MidnightBlue;">
-    <font face ="verdana" color="white">
+    <font face ="verdana" style="color:lightgray">
     <h3 style="text-align:right">
         Cat
     </h3>
