--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <table border = "0" style="margin: 0 auto;">
       <tr>
       <td>
+      <img src="mm1-1-2.png">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
       <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Primer acto: Embarcando</a></br>
       <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Segundo acto: Un pasajero muy peludo</a></br>
