--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <td>
       <img src="mm1-1-2.png">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
-      <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Primer acto: Embarcando</a></br>
-      <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Segundo acto: Un pasajero muy peludo</a></br>
-      <a style="color:lightgray" style="text-decoration:none;" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
+      <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Primer acto: Embarcando</a></br>
+      <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Segundo acto: Un pasajero muy peludo</a></br>
+      <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
       </td>
       <td>
     <h3>Capítulo 2: La coreografía</h3>
