--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
     <table border = "0" style="margin: 0 auto;">
       <tr>
       <td>
-      <img src="mm1-1-2.png">
+      <img src="mm1-1-2.png" width="361" heigth="369">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
       <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Primer acto: Embarcando</a></br>
       <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Segundo acto: Un pasajero muy peludo</a></br>
       <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
       </td>
       <td>
+    <img src="mm1-2-2.png" width="361" heigth="324">
     <h3>Capítulo 2: La coreografía</h3>
     <a style="color:lightgray" style="text-decoration:none;" href="mm2 - La coreografía 1 - Hora del patio.pdf">Primer acto: Hora del patio</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm2 - La coreografía 2 - Reunión clandestina.pdf">Segundo acto: Reunión clandestina</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm2 - La coreografía 3 - Escapar de la fábrica.pdf">Acto final: Escapar de la fábrica</a>    
       </td>
       <td>
+    <img src="mm1-3-1.png" width="361" heigth="323">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
     <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 1 - Empieza la fiesta.pdf">Primer acto: Empieza la fiesta</a></br>
     <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 2 - La tienda nueva.pdf">Segundo acto: La tienda nueva</a></br>
