--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <table border = "0" style="margin: 0 auto;">
       <tr>
       <td>
-      <img src="mm1-1-2.png" width="361" heigth="324">
+      <img src="mm1-1-2.png" width="361" heigth="369">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
       <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Primer acto: Embarcando</a></br>
       <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Segundo acto: Un pasajero muy peludo</a></br>
@@ -31,16 +31,16 @@
       <td>
     <img src="mm1-3-1.png" width="361" heigth="324">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
-    <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 1 - Empieza la fiesta.pdf">Primer acto: Empieza la fiesta</a></br>
-    <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 2 - La tienda nueva.pdf">Segundo acto: La tienda nueva</a></br>
-    <a style="color:lightgray" style="text-decoration:none;" href="mm3 - Cumpleaños feliz 3 - La primera cita.pdf">Acto final: La primera cita</a>    
+    <a style="color:lightgray" href="mm3 - Cumpleaños feliz 1 - Empieza la fiesta.pdf">Primer acto: Empieza la fiesta</a></br>
+    <a style="color:lightgray" href="mm3 - Cumpleaños feliz 2 - La tienda nueva.pdf">Segundo acto: La tienda nueva</a></br>
+    <a style="color:lightgray" href="mm3 - Cumpleaños feliz 3 - La primera cita.pdf">Acto final: La primera cita</a>    
       </td>
       </tr>
       <tr>
       <td>
       </td>
       <td>
-        <h3>Continuará...</h3>
+        <h3 style="text-align:center">Continuará...</h3>
       </td>
       </tr>
     </table>
