--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
-    <h3 style="text-align:right">
+    <h3 style="text-align:right" href="cat/index.html">
         Cat
     </h3>
     <h1 style="text-align:center">
