--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <table border = "0" style="margin: 0 auto;">
       <tr>
       <td>
-      <img src="mm1-1-2.png" width="361" heigth="369">
+      <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
-      <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 1 - Embarcando.pdf">Primer acto: Embarcando</a></br>
-      <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 2 - Un pasajero muy peludo.pdf">Segundo acto: Un pasajero muy peludo</a></br>
-      <a style="text-decoration:none;" href="mm1 - Vuelo a Twelville 3 - Carrera entre aviones.pdf">Acto final: Carrera entre aviones</a>
+      <a style="text-decoration:none;" href="chapters/mm1-1-1.pdf">Primer acto: Embarcando</a></br>
+      <a style="text-decoration:none;" href="chapters/mm1-1-2.pdf">Segundo acto: Un pasajero muy peludo</a></br>
+      <a style="text-decoration:none;" href="chapters/mm1-1-3.pdf">Acto final: Carrera entre aviones</a>
       </td>
       <td>
-    <img src="mm1-2-2.png" width="361" heigth="324">
+    <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
-    <a style="text-decoration:none;" style="color:lightgray" href="mm2 - La coreografía 1 - Hora del patio.pdf">Primer acto: Hora del patio</a></br>
-    <a style="text-decoration:none;" style="color:lightgray" href="mm2 - La coreografía 2 - Reunión clandestina.pdf">Segundo acto: Reunión clandestina</a></br>
-    <a style="text-decoration:none;" style="color:lightgray" href="mm2 - La coreografía 3 - Escapar de la fábrica.pdf">Acto final: Escapar de la fábrica</a>    
+    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acto: Hora del patio</a></br>
+    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-2.pdf">Segundo acto: Reunión clandestina</a></br>
+    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-3.pdf">Acto final: Escapar de la fábrica</a>    
       </td>
       <td>
-    <img src="mm1-3-1.png" width="361" heigth="324">
+    <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
-    <a style="color:lightgray" href="mm3 - Cumpleaños feliz 1 - Empieza la fiesta.pdf">Primer acto: Empieza la fiesta</a></br>
-    <a style="color:lightgray" href="mm3 - Cumpleaños feliz 2 - La tienda nueva.pdf">Segundo acto: La tienda nueva</a></br>
-    <a style="color:lightgray" href="mm3 - Cumpleaños feliz 3 - La primera cita.pdf">Acto final: La primera cita</a>    
+    <a style="color:lightgray" href="chapters/mm1-3-1.pdf">Primer acto: Empieza la fiesta</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-2.pdf">Segundo acto: La tienda nueva</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-3.pdf">Acto final: La primera cita</a>    
       </td>
       </tr>
       <tr>
