--- a/cat/index.html
+++ b/cat/index.html
@@ -17,16 +17,16 @@
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
-      <a style="text-decoration:none;" href="chapters/mm1-1-1.pdf">Primer acte: Embarcant</a></br>
-      <a style="text-decoration:none;" href="chapters/mm1-1-2.pdf">Segon acte: Un passatger molt pelut</a></br>
-      <a style="text-decoration:none;" href="chapters/mm1-1-3.pdf">Acte final: Cursa entre avions</a>
+      <a style="color:lightgray" href="chapters/mm1-1-1.pdf">Primer acte: Embarcant</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-2.pdf">Segon acte: Un passatger molt pelut</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-3.pdf">Acte final: Cursa entre avions</a>
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
-    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acte: Hora del pati</a></br>
-    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-2.pdf">Segon acte: Reunió clandestina</a></br>
-    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-3.pdf">Acte final: Escapar de la fàbrica</a>    
+    <a style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acte: Hora del pati</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-2.pdf">Segon acte: Reunió clandestina</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-3.pdf">Acte final: Escapar de la fàbrica</a>    
       </td>
       <td>
     <img src="images/mm1-3-1.png" width="361" heigth="345">
