--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
-    <h3 style="text-align:right" href="cat/index.html">
+    <a style="text-align:right" size="10" href="cat/index.html">
         Cat
-    </h3>
+    </a>
     <h1 style="text-align:center">
         Mat Maths - Aventuras en Izeland
     </h1>
