--- a/cat/index.html
+++ b/cat/index.html
@@ -2,9 +2,9 @@
 <html>
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
-    <h3 style="text-align:right" href="../index.html">
+    <a style="text-align:right" href="../index.html">
         Es
-    </h3>
+    </a>
     <h1 style="text-align:center">
         Mat Maths - Aventuras a Izeland
     </h1>
@@ -15,21 +15,21 @@
     <table border = "0" style="margin: 0 auto;">
       <tr>
       <td>
-      <img src="images/mm1-1-2.png" width="361" heigth="345">
+      <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
       <a style="color:lightgray" href="chapters/mm1-1-1.pdf">Primer acte: Embarcant</a></br>
       <a style="color:lightgray" href="chapters/mm1-1-2.pdf">Segon acte: Un passatger molt pelut</a></br>
       <a style="color:lightgray" href="chapters/mm1-1-3.pdf">Acte final: Cursa entre avions</a>
       </td>
       <td>
-    <img src="images/mm1-2-2.png" width="361" heigth="345">
+    <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
     <a style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acte: Hora del pati</a></br>
     <a style="color:lightgray" href="chapters/mm1-2-2.pdf">Segon acte: Reunió clandestina</a></br>
     <a style="color:lightgray" href="chapters/mm1-2-3.pdf">Acte final: Escapar de la fàbrica</a>    
       </td>
       <td>
-    <img src="images/mm1-3-1.png" width="361" heigth="345">
+    <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
     <a style="color:lightgray" href="chapters/mm1-3-1.pdf">Primer acte: Comença la fiesta</a></br>
     <a style="color:lightgray" href="chapters/mm1-3-2.pdf">Segon acte: La botiga nova</a></br>
