--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
-    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acto: Hora del patio</a></br>
-    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-2.pdf">Segundo acto: Reunión clandestina</a></br>
-    <a style="text-decoration:none;" style="color:lightgray" href="chapters/mm1-2-3.pdf">Acto final: Escapar de la fábrica</a>    
+        <font color="grey">
+    <a style="text-decoration:none;" href="chapters/mm1-2-1.pdf">Primer acto: Hora del patio</a></br>
+    <a style="text-decoration:none;" href="chapters/mm1-2-2.pdf">Segundo acto: Reunión clandestina</a></br>
+    <a style="text-decoration:none;" href="chapters/mm1-2-3.pdf">Acto final: Escapar de la fábrica</a>    
+        </font>
       </td>
       <td>
     <img src="images/mm1-3-1.png" width="361" heigth="345">
