--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <td>
       </td>
       <td>
-        <h3 style="text-align:center">Continuará.....</h3>
+        <h3 style="text-align:center">Continuará..... .</h3>
       </td>
       </tr>
     </table>
