--- a/cat/index.html
+++ b/cat/index.html
@@ -2,11 +2,13 @@
 <html>
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
-    <a style="text-align:right" href="../index.html">
+    <div align="right">
+    <a href="../index.html">
         Es
     </a>
+    </div>
     <h1 style="text-align:center">
-        Mat Maths - Aventuras a Izeland
+        Mat Maths - Aventures a Izeland
     </h1>
     <h2 style="text-align:center">
         Temporada 1: Ko, la muntanya màgica
@@ -31,7 +33,7 @@
       <td>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
-    <a style="color:lightgray" href="chapters/mm1-3-1.pdf">Primer acte: Comença la fiesta</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-1.pdf">Primer acte: Comença la festa</a></br>
     <a style="color:lightgray" href="chapters/mm1-3-2.pdf">Segon acte: La botiga nova</a></br>
     <a style="color:lightgray" href="chapters/mm1-3-3.pdf">Acte final: La primera cita</a>    
       </td>
