--- a/cat/index.html
+++ b/cat/index.html
@@ -3,7 +3,7 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
     <div align="right">
-    <a href="../index.html">
+    <a style="color:lightgray" href="../index.html">
         Es
     </a>
     </div>
@@ -13,6 +13,7 @@
     <h2 style="text-align:center">
         Temporada 1: Ko, la muntanya màgica
     </h2>
+      <br>
     <div>
     <table border = "0" style="margin: 0 auto;">
       <tr>
@@ -42,6 +43,7 @@
       <td>
       </td>
       <td>
+        <br>
         <h3 style="text-align:center">Continuarà...</h3>
       </td>
       </tr>
