--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
-    <a style="text-align:right" size="10" href="cat/index.html">
+    <div align="right">
+    <a style="color:lightgray" href="cat/index.html">
         Cat
     </a>
+    </div>    
     <h1 style="text-align:center">
         Mat Maths - Aventuras en Izeland
     </h1>
@@ -17,17 +19,17 @@
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
-      <a style="text-decoration:none;" href="chapters/mm1-1-1.pdf">Primer acto: Embarcando</a></br>
-      <a style="text-decoration:none;" href="chapters/mm1-1-2.pdf">Segundo acto: Un pasajero muy peludo</a></br>
-      <a style="text-decoration:none;" href="chapters/mm1-1-3.pdf">Acto final: Carrera entre aviones</a>
+      <a style="color:lightgray" href="chapters/mm1-1-1.pdf">Primer acto: Embarcando</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-2.pdf">Segundo acto: Un pasajero muy peludo</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-3.pdf">Acto final: Carrera entre aviones</a>
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
         <font color="grey">
-    <a style="text-decoration:none;" href="chapters/mm1-2-1.pdf">Primer acto: Hora del patio</a></br>
-    <a style="text-decoration:none;" href="chapters/mm1-2-2.pdf">Segundo acto: Reunión clandestina</a></br>
-    <a style="text-decoration:none;" href="chapters/mm1-2-3.pdf">Acto final: Escapar de la fábrica</a>    
+    <a style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acto: Hora del patio</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-2.pdf">Segundo acto: Reunión clandestina</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-3.pdf">Acto final: Escapar de la fábrica</a>    
         </font>
       </td>
       <td>
@@ -42,7 +44,7 @@
       <td>
       </td>
       <td>
-        <h3 style="text-align:center">Continuará..... .</h3>
+        <h3 style="text-align:center">Continuará..... ..</h3>
       </td>
       </tr>
     </table>
