--- a/cat/index.html
+++ b/cat/index.html
@@ -13,7 +13,7 @@
     <h2 style="text-align:center">
         Temporada 1: Ko, la muntanya màgica
     </h2>
-      <br>
+      <br></br>
     <div>
     <table border = "0" style="margin: 0 auto;">
       <tr>
@@ -43,8 +43,8 @@
       <td>
       </td>
       <td>
-        <br>
-        <h3 style="text-align:center">Continuarà...</h3>
+        <br></br>
+        <h3 style="text-align:center">Continuarà..</h3>
       </td>
       </tr>
     </table>
