--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </td>
       <td>
         <br></br>
-        <h3 style="text-align:center">Continuará..... ...</h3>
+        <h3 style="text-align:center">Continuará...</h3>
       </td>
       </tr>
     </table>
