--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
-      <a style="color:lightgray" href="chapters/mm1-1-1.pdf">Primer acto: Embarcando</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-2.pdf">Segundo acto: Un pasajero muy peludo</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-3.pdf">Acto final: Carrera entre aviones</a>
+      <a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a>
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
         <font color="grey">
-    <a style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acto: Hora del patio</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-2.pdf">Segundo acto: Reunión clandestina</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-3.pdf">Acto final: Escapar de la fábrica</a>    
+    <a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acto: Hora del patio</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segundo acto: Reunión clandestina</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acto final: Escapar de la fábrica</a>    
         </font>
       </td>
       <td>
     <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
-    <a style="color:lightgray" href="chapters/mm1-3-1.pdf">Primer acto: Empieza la fiesta</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-2.pdf">Segundo acto: La tienda nueva</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-3.pdf">Acto final: La primera cita</a>    
+    <a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segundo acto: La tienda nueva</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acto final: La primera cita</a>    
       </td>
       </tr>
       <tr>
@@ -46,7 +46,7 @@
       </td>
       <td>
         <br></br>
-        <h3 style="text-align:center">Continuará...</h3>
+        <h3 style="text-align:center">Continuará....</h3>
       </td>
       </tr>
     </table>
