--- a/cat/index.html
+++ b/cat/index.html
@@ -15,28 +15,28 @@
     </h2>
       <br></br>
     <div>
-    <table border = "0" style="margin: 0 auto;">
+    <table border = "0" style="margin: 0 auto;" cellspacing="10">
       <tr>
       <td>
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
-      <a style="color:lightgray" href="chapters/mm1-1-1.pdf">Primer acte: Embarcant</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-2.pdf">Segon acte: Un passatger molt pelut</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-3.pdf">Acte final: Cursa entre avions</a>
+      <a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acte: Embarcant</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></br>
+      <a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a>
       </td>
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
-    <a style="color:lightgray" href="chapters/mm1-2-1.pdf">Primer acte: Hora del pati</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-2.pdf">Segon acte: Reunió clandestina</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-3.pdf">Acte final: Escapar de la fàbrica</a>    
+    <a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acte: Hora del pati</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br>
+    <a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a>    
       </td>
       <td>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
-    <a style="color:lightgray" href="chapters/mm1-3-1.pdf">Primer acte: Comença la festa</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-2.pdf">Segon acte: La botiga nova</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-3.pdf">Acte final: La primera cita</a>    
+    <a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acte: Comença la festa</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br>
+    <a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a>    
       </td>
       </tr>
       <tr>
@@ -44,7 +44,7 @@
       </td>
       <td>
         <br></br>
-        <h3 style="text-align:center">Continuarà..</h3>
+        <h3 style="text-align:center">Continuarà....</h3>
       </td>
       </tr>
     </table>
