--- a/cat/index.html
+++ b/cat/index.html
@@ -44,7 +44,7 @@
       </td>
       <td>
         <br></br>
-        <h3 style="text-align:center">Continuarà....</h3>
+        <h3 style="text-align:center">Continuarà...</h3>
       </td>
       </tr>
     </table>
