--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h2>
     <br></br>
     <div>
-    <table border = "0" style="margin: 0 auto;">
+    <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
