--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:MidnightBlue;">
+  <body style="background-color:Black;">
     <font face ="verdana" style="color:lightgray">
     <div align="right">
     <a style="color:lightgray" href="cat/index.html">
@@ -46,7 +46,7 @@
       </td>
       <td>
         <br></br>
-        <h3 style="text-align:center">Continuará....</h3>
+        <h3 style="text-align:center">Continuará...</h3>
       </td>
       </tr>
     </table>
