--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
   <body style="background-color:DarkRed;">
     <font face ="verdana" style="color:lightgray">
-    <div align="right">
-    <a style="color:lightgray" href="cat/index.html">
-        Cat
-    </a>
-    </div>    
+      
+    <div>
+    <table border = "0" style="margin: 0 auto;">
+      <tr>
+      <td>
+      <a style="color:lightgray" href="info.html">Info</a>
+      </td>
+      <td>
+      <div align="right">
+      <a style="color:lightgray" href="cat/index.html">Cat</a>
+      </div>
+      </td>
+      </tr>
+    </table>  
+    </div>  
+      
     <h1 style="text-align:center">
         Mat Maths - Aventuras en Izeland
     </h1>
