--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <font face ="verdana" style="color:lightgray">
       
     <div>
-    <table border = "0" style="margin: 0 auto;">
+    <table border = "0" style="margin: 0 auto;" style="width: 100%;">
       <tr>
       <td>
       <a style="color:lightgray" href="info.html">Info</a>
