--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:DarkRed;">
+  <body style="background-color:Purple;">
     <font face ="verdana" style="color:lightgray">
       
     <div>
