--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:Purple;">
+  <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
+      
+    <div><span style="float:right">Cat</span>Info</div>
       
     <div>
     <table border = "0" style="margin: 0 auto;" style="width: 100%;">
