--- a/info.html
+++ b/info.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:Green;">
+  <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
       
     <div>
