--- a/info.html
+++ b/info.html
@@ -32,7 +32,27 @@
       <img src="images/mm1-3-2.png">
       </td>
       <td>
-    Nuestro propósito es bonito
+ <p>En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
+   i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se’ns presenten.</p>
+<p>Les aventures apareixen en fitxes descarregables amb l'aspecte de llibre de lectura. 
+  Contenen la història i quadres de definició i exercicis per treballar els continguts matemàtics.</p>
+Mat Maths comprèn els quatre cursos de secundària. 
+        Cada curs conté de nou a dotze unitats didàctiques i cada unitat, tres fitxes. 
+Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos; de capítols en lloc d'unitats didàctiques; 
+        i d'actes en lloc de fitxes. 
+
+<p> Mat Maths és motivador i rigorós. Motivador, ja que s'emmarca en la tradició mil·lenària 
+  de transmetre coneixement a partir d’històries. I rigorós ja que els continguts són curriculars.</p>
+<p>Mat Maths és pràctic i versàtil. Pràctic, perquè és fàcilment descarregable des d'Intenet i perquè té un format en B/N per a 
+  què es pugui fotocopiar. Versàtil, perquè és útil en moltes situacions diverses:
+<ul>
+<li>En grups difícils o en aules d’acollida.</li>
+<li>En absència del professor titular, pot servir per a cobrir una lliçó amb el professor de guàrdia.</li>
+<li>Treball autònom dels alumnes des de casa.</li>
+<li>Amb algun tipus de material de suport, es pot compaginar amb classes de llengua.</li>
+<li>Material de treball a l’estiu.</li>
+</ul>
+
     </td>
     </tr>
     </table>
