--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
       
-    <div><span style="float:right">Cat</span>Info</div>
+    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Cat</a></span>Info</div>
       
     <div>
     <table border = "0" style="margin: 0 auto;" style="width: 100%;">
