--- a/cat/index.html
+++ b/cat/index.html
@@ -2,11 +2,9 @@
 <html>
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
-    <div align="right">
-    <a style="color:lightgray" href="../index.html">
-        Es
-    </a>
-    </div>
+   
+    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Es</a></span><a style="color:lightgray" href="info.html">Info</a></div>
+
     <h1 style="text-align:center">
         Mat Maths - Aventures a Izeland
     </h1>
