--- a/info.html
+++ b/info.html
@@ -43,15 +43,16 @@ Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cu
 
 <p> Mat Maths és motivador i rigorós. Motivador, ja que s'emmarca en la tradició mil·lenària 
   de transmetre coneixement a partir d’històries. I rigorós ja que els continguts són curriculars.</p>
-<p>Mat Maths és pràctic i versàtil. Pràctic, perquè és fàcilment descarregable des d'Intenet i perquè té un format en B/N per a 
-  què es pugui fotocopiar. Versàtil, perquè és útil en moltes situacions diverses:
+<p>Mat Maths és pràctic, perquè és directament descarregable des d'Intenet i perquè té un format en B/N fàcilment fotocopiable, 
+  i versàtil, perquè és útil en moltes situacions diverses:
 <ul>
 <li>En grups difícils o en aules d’acollida.</li>
-<li>En absència del professor titular, pot servir per a cobrir una lliçó amb el professor de guàrdia.</li>
-<li>Treball autònom dels alumnes des de casa.</li>
-<li>Amb algun tipus de material de suport, es pot compaginar amb classes de llengua.</li>
-<li>Material de treball a l’estiu.</li>
+<li>En absència del/de la professor/a titular, pot servir per a cobrir una lliçó amb un/a professor/a de guàrdia.</li>
+<li>Per que l'alumnat treballi autònomament des de casa.</li>
+<li>En classes interdisciplinars de matemàtiques i llengua.</li>
+<li>Com a material de treball per a l’estiu.</li>
 </ul>
+<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos, i les il·lustracions son de l'Arnau Solà.
 
     </td>
     </tr>
