--- a/info.html
+++ b/info.html
@@ -41,18 +41,19 @@ Mat Maths comprèn els quatre cursos de secundària.
 Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos; de capítols en lloc d'unitats didàctiques; 
         i d'actes en lloc de fitxes. 
 
-<p> Mat Maths és motivador i rigorós. Motivador, ja que s'emmarca en la tradició mil·lenària 
-  de transmetre coneixement a partir d’històries. I rigorós ja que els continguts són curriculars.</p>
+<p> Mat Maths és motivador, ja que s'emmarca en la tradició
+de transmetre coneixement a partir d’històries, i rigorós ja que els continguts són acurats i curriculars.</p>
 <p>Mat Maths és pràctic, perquè és directament descarregable des d'Intenet i perquè té un format en B/N fàcilment fotocopiable, 
   i versàtil, perquè és útil en moltes situacions diverses:
 <ul>
 <li>En grups difícils o en aules d’acollida.</li>
-<li>En absència del/de la professor/a titular, pot servir per a cobrir una lliçó amb un/a professor/a de guàrdia.</li>
-<li>Per que l'alumnat treballi autònomament des de casa.</li>
+<li>Per a cobrir una lliçó amb un/a professor/a de guàrdia en absència del/a titular.</li>
+<li>Per al treball autònom dels alumnes a casa.</li>
 <li>En classes interdisciplinars de matemàtiques i llengua.</li>
-<li>Com a material de treball per a l’estiu.</li>
+<li>Com a material de treball d’estiu.</li>
 </ul>
-<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos, i les il·lustracions son de l'Arnau Solà.
+<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos. Les marevelloses il·lustracions són a càrrec de l'Arnau Solà Vila.</p>
+<p>Agrairem que envïin a izeland.com@gmail.com qualsevol tipus de comentari.</p>
 
     </td>
     </tr>
