--- a/info.html
+++ b/info.html
@@ -3,20 +3,9 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
       
-    <div>
-    <table border = "0" style="margin: 0 auto;" style="width: 100%;">
-      <tr>
-      <td>
-      <a style="color:lightgray" href="index.html">Main</a>
-      </td>
-      <td>
-      <div align="right">
-      <a style="color:lightgray" href="cat/index.html">Cat</a>
-      </div>
-      </td>
-      </tr>
-    </table>  
-    </div>  
+    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Cat</a></span>
+      <a style="color:lightgray" href="index.html">Main</a></div>
+  
       
     <h1 style="text-align:center">
         Mat Maths - Aventuras en Izeland
