--- a/info.html
+++ b/info.html
@@ -23,12 +23,12 @@
       <td>
  <p>En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
    i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se’ns presenten.</p>
-<p>Les aventures apareixen en fitxes descarregables amb l'aspecte de llibre de lectura. 
-  Contenen la història i quadres de definició i exercicis per treballar els continguts matemàtics.</p>
-Mat Maths comprèn els quatre cursos de secundària. 
+<p>Les aventures apareixen en fitxes descarregables amb l'aspecte de llibre de lectura que, a banda de la història, 
+  contenen i quadres de definició i exercicis per treballar els continguts matemàtics.</p>
+<p>Mat Maths comprèn els quatre cursos de secundària. 
         Cada curs conté de nou a dotze unitats didàctiques i cada unitat, tres fitxes. 
 Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos; de capítols en lloc d'unitats didàctiques; 
-        i d'actes en lloc de fitxes. 
+  i d'actes en lloc de fitxes. </p>
 
 <p> Mat Maths és motivador, ja que s'emmarca en la tradició
 de transmetre coneixement a partir d’històries, i rigorós ja que els continguts són acurats i curriculars.</p>
