--- a/info.html
+++ b/info.html
@@ -22,7 +22,7 @@
       </td>
       <td>
  <p>En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
-   i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se’ns presenten.</p>
+   i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se li presenten.</p>
 <p>Les aventures apareixen en fitxes descarregables amb l'aspecte de llibre de lectura que, a banda de la història, 
   contenen i quadres de definició i exercicis per treballar els continguts matemàtics.</p>
 <p>Mat Maths comprèn els quatre cursos de secundària. 
@@ -41,7 +41,7 @@ de transmetre coneixement a partir d’històries, i rigorós ja que els conting
 <li>En classes interdisciplinars de matemàtiques i llengua.</li>
 <li>Com a material de treball d’estiu.</li>
 </ul>
-<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos. Les marevelloses il·lustracions són a càrrec de l'Arnau Solà Vila.</p>
+<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos. Les marevelloses il·lustracions que van de la mà del text són a càrrec de l'Arnau Solà Vila.</p>
 <p>Agrairem que envïin a izeland.com@gmail.com qualsevol tipus de comentari.</p>
 
     </td>
