--- a/cat/info.html
+++ b/cat/info.html
@@ -18,7 +18,7 @@
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
       <td>
-      <img src="images/mm1-3-2.png">
+      <img src="../images/mm1-3-2.png">
       </td>
       <td>
  <p>En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
@@ -32,7 +32,7 @@ Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cu
 
 <p> Mat Maths és motivador, ja que s'emmarca en la tradició
 de transmetre coneixement a partir d’històries, i rigorós ja que els continguts són acurats i curriculars.</p>
-<p>Mat Maths és pràctic, perquè és directament descarregable des d'Intenet i perquè té un format en B/N fàcilment fotocopiable, 
+<p>Mat Maths és pràctic, perquè és directament descarregable des d'Internet i perquè té un format en B/N fàcilment fotocopiable, 
   i versàtil, perquè és útil en moltes situacions diverses:
 <ul>
 <li>En grups difícils o en aules d’acollida.</li>
