--- a/cat/info.html
+++ b/cat/info.html
@@ -24,7 +24,7 @@
  <p>En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
    i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se li presenten.</p>
 <p>Les aventures apareixen en fitxes descarregables amb l'aspecte de llibre de lectura que, a banda de la història, 
-  contenen i quadres de definició i exercicis per treballar els continguts matemàtics.</p>
+  contenen quadres de definició i exercicis per a treballar els continguts matemàtics.</p>
 <p>Mat Maths comprèn els quatre cursos de secundària. 
         Cada curs conté de nou a dotze unitats didàctiques i cada unitat, tres fitxes. 
 Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos; de capítols en lloc d'unitats didàctiques; 
