--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Cat</a></span><a style="color:lightgray" href="info.html">Info</a></div>
       
     <h1 style="text-align:center">
-        Mat Maths - Aventuras en Izeland
+        Mat Maths ~ Aventuras en Izeland
     </h1>
+    <p>Acompaña a Mat en sus peripecias por Izeland, desvela los misterios que esconde la isla y, además, aprende matemáticas con él</p>
+    <br></br>
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
-    <br></br>
     <div>
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
