--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1 style="text-align:center">
         Mat Maths ~ Aventuras en Izeland
     </h1>
-    <p>Acompaña a Mat en sus peripecias por Izeland, desvela los misterios que esconde la isla y, además, aprende matemáticas con él</p>
+    <br></br>
+    <p align="center">Acompaña a Mat en sus peripecias por Izeland y desvelarás los misterios que esconde esta isla hueca. Además, de la mano de Mat, descubrirás las maravillas de las matemáticas</p>
     <br></br>
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
