--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       <td>
       <img src="images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítulo 1: Vuelo a Twelville</h3>
-      <a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a>
+      <ul>
+      <li><a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acto: Embarcando</a></br></li>
+      <li><a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segundo acto: Un pasajero muy peludo</a></br></li>
+      <li><a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acto final: Carrera entre aviones</a></li>
+      </ul>
       </td>
       <td>
     <img src="images/mm1-2-2.png" width="361" heigth="345">
