--- a/index.html
+++ b/index.html
@@ -33,17 +33,21 @@
     <img src="images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítulo 2: La coreografía</h3>
         <font color="grey">
-    <a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acto: Hora del patio</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segundo acto: Reunión clandestina</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acto final: Escapar de la fábrica</a>    
+    <ul>     
+    <li><a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acto: Hora del patio</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segundo acto: Reunión clandestina</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acto final: Escapar de la fábrica</a></li>
+    </ul>
         </font>
       </td>
       <td>
     <img src="images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítulo 3: Cumpleaños feliz</h3>
-    <a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segundo acto: La tienda nueva</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acto final: La primera cita</a>    
+    <ul>  
+    <li><a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acto: Empieza la fiesta</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segundo acto: La tienda nueva</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acto final: La primera cita</a></li>
+    </ul>  
       </td>
       </tr>
       <tr>
