--- a/info.html
+++ b/info.html
@@ -17,8 +17,8 @@
     <div>
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
-      <td valign="up">
-      <img src="images/mm1-3-2.png">
+      <td>
+      <img src="images/mm1-3-2.png" align="top">
       </td>
       <td>
         
