--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
     <font face ="verdana" style="color:lightgray">
       
     <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Cat</a></span>
-      <a style="color:lightgray" href="index.html">Main</a></div>
+      <a style="color:lightgray" href="index.html">Inicio</a></div>
   
       
     <h1 style="text-align:center">
