--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         Mat Maths ~ Aventuras en Izeland
     </h1>
       
+    <br>
     <font size ="4">
     <p align="center">Acompaña a Mat en sus peripecias por Izeland y desvelarás los misterios que esconde esta isla hueca.</p>
-    <p align="center">Además, de la mano de Mat, descubrirás las maravillas de las matemáticas</p>
+    <p align="center">Además, de la mano de Mat, descubrirás las maravillas de las matemáticas.</p>
     </font>
-    
+    <br>
     <h2 style="text-align:center">
         Temporada 1: Ko, la montaña mágica
     </h2>
