--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       
     <br>
     <font size ="4">
-    <p align="center">Acompaña a Mat en sus peripecias por Izeland y desvelarás los misterios que esconde esta isla hueca.</p>
-    <p align="center">Además, de la mano de Mat, descubrirás las maravillas de las matemáticas.</p>
+    <p align="center">Acompaña a Mat en sus peripecias por Izeland y desvelarás los misterios que esconde esta isla hueca.<br>Además, de la mano de Mat, descubrirás las maravillas de las matemáticas.</p>
     </font>
     <br>
     <h2 style="text-align:center">
