--- a/cat/index.html
+++ b/cat/index.html
@@ -9,6 +9,9 @@
     <h1 style="text-align:center">
         Mat Maths - Aventures a Izeland
     </h1>
+    <br></br>
+    <p>Acompanya a en Mat en les seves peripècies per Izeland y desvelarás els misteris que amaga aquesta illa foradada.<br>A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p>
+    <br></br>
     <h2 style="text-align:center">
         Temporada 1: Ko, la muntanya màgica
     </h2>
@@ -19,23 +22,29 @@
       <td>
       <img src="../images/mm1-1-2.png" width="361" heigth="345">
       <h3>Capítol 1: Vol a Twelville</h3>
-      <a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acte: Embarcant</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></br>
-      <a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a>
+      <ul>
+      <li><a style="color:lightgray" href="chapters/mm1-1-1.pdf" target="_blank">Primer acte: Embarcant</a></li>
+      <li><a style="color:lightgray" href="chapters/mm1-1-2.pdf" target="_blank">Segon acte: Un passatger molt pelut</a></li>
+      <li><a style="color:lightgray" href="chapters/mm1-1-3.pdf" target="_blank">Acte final: Cursa entre avions</a></li>
+      </ul>
       </td>
       <td>
     <img src="../images/mm1-2-2.png" width="361" heigth="345">
     <h3>Capítol 2: La coreografia</h3>
-    <a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acte: Hora del pati</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br>
-    <a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a>    
+    <ul>      
+    <li><a style="color:lightgray" href="chapters/mm1-2-1.pdf" target="_blank">Primer acte: Hora del pati</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-2-2.pdf" target="_blank">Segon acte: Reunió clandestina</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-2-3.pdf" target="_blank">Acte final: Escapar de la fàbrica</a></li>    
+      </ul>
       </td>
       <td>
     <img src="../images/mm1-3-1.png" width="361" heigth="345">
     <h3>Capítol 3: Dotzè aniversari</h3>
-    <a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acte: Comença la festa</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br>
-    <a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a>    
+    <ul>      
+    <li><a style="color:lightgray" href="chapters/mm1-3-1.pdf" target="_blank">Primer acte: Comença la festa</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-3-2.pdf" target="_blank">Segon acte: La botiga nova</a></br></li>
+    <li><a style="color:lightgray" href="chapters/mm1-3-3.pdf" target="_blank">Acte final: La primera cita</a></li>
+      </ul>
       </td>
       </tr>
       <tr>
