--- a/cat/index.html
+++ b/cat/index.html
@@ -7,15 +7,16 @@
       <a style="color:lightgray" href="http://izeland.com/cat/info.html">Info</a></div>
 
     <h1 style="text-align:center">
-        Mat Maths - Aventures a Izeland
+        Mat Maths ~ Aventures a Izeland
     </h1>
     <br></br>
-    <p>Acompanya a en Mat en les seves peripècies per Izeland y desvelarás els misteris que amaga aquesta illa foradada.<br>A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p>
+    <font size="4">
+    <p align="center">Acompanya a en Mat en les seves peripècies per Izeland y desvelarás els misteris que amaga aquesta illa foradada.<br>A més a més, de la mà d'en Mat, descobrirás les meravelles de les matemàtiques.</p>
+    </font>
     <br></br>
     <h2 style="text-align:center">
         Temporada 1: Ko, la muntanya màgica
     </h2>
-      <br></br>
     <div>
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
