--- a/info.html
+++ b/info.html
@@ -39,7 +39,7 @@ Mat Maths es un personaje de ficción al que acompañamos durante sus aventuras 
 <p>Mat Maths ha sido ideado por Xavi Juez, quien también ha elaborado los textos. Las maravillosas ilustraciones son a cargo del Arnau Solà Vila.</p>
 
 <br></br>
-<p>Agradeceremos que envíen a izeland.com@gmail.com cualquier tipo de comentario.</p>
+      <p>Agradeceremos que envíen a <b>izeland.com@gmail.com</b> cualquier tipo de comentario.</p>
         
        
     </td>
