--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   
       
     <h1 style="text-align:center">
-        Mat Maths - Aventuras en Izeland
+        Mat Maths ~ Aventuras en Izeland
     </h1>
     <h2 style="text-align:center">
         Propósito
