--- a/cat/info.html
+++ b/cat/info.html
@@ -17,23 +17,22 @@
     <div>
     <table border = "0" style="margin: 0 auto;" cellspacing="25">
       <tr>
-      <td>
+      <td style="vertical-align: top;">
       <img src="../images/mm1-3-2.png">
       </td>
       <td>
- <p>En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
-   i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se li presenten.</p>
-<p>Les aventures apareixen en fitxes descarregables amb l'aspecte de llibre de lectura que, a banda de la història, 
+ En Mat Maths és un personatge de ficció a qui acompanyem en tot d’aventures a l’illa on viu, Izeland, 
+   i amb el qual aprenem matemàtiques. I és que gràcies a les matemàtiques aconseguim resoldre els misteris que se li presenten.
+<p>Les aventures apareixen en fitxes descarregables i imprimibles en B/N amb aspecte de llibre de lectura que, a banda de la història, 
   contenen quadres de definició i exercicis per a treballar els continguts matemàtics.</p>
-<p>Mat Maths comprèn els quatre cursos de secundària. 
-        Cada curs conté de nou a dotze unitats didàctiques i cada unitat, tres fitxes. 
-Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos; de capítols en lloc d'unitats didàctiques; 
+<p>Mat Maths comprendrà els quatre cursos de secundària. 
+        Cada curs contindrà de nou a dotze unitats didàctiques i cada unitat, tres fitxes. 
+Vist des del punt de vista de ficció, però, parlem de temporades en lloc de cursos, de capítols en lloc d'unitats didàctiques,
   i d'actes en lloc de fitxes. </p>
 
-<p> Mat Maths és motivador, ja que s'emmarca en la tradició
-de transmetre coneixement a partir d’històries, i rigorós ja que els continguts són acurats i curriculars.</p>
-<p>Mat Maths és pràctic, perquè és directament descarregable des d'Internet i perquè té un format en B/N fàcilment fotocopiable, 
-  i versàtil, perquè és útil en moltes situacions diverses:
+<p> Mat Maths és motivador i rigorós. Motivador, ja que s'emmarca en la tradició
+de transmetre coneixement a partir d’històries, i rigorós, ja que els continguts són acurats i curriculars.</p>
+<p>Mat Maths és útil en moltes situacions diverses:
 <ul>
 <li>En grups difícils o en aules d’acollida.</li>
 <li>Per a cobrir una lliçó amb un/a professor/a de guàrdia en absència del/a titular.</li>
@@ -41,8 +40,9 @@ de transmetre coneixement a partir d’històries, i rigorós ja que els conting
 <li>En classes interdisciplinars de matemàtiques i llengua.</li>
 <li>Com a material de treball d’estiu.</li>
 </ul>
-<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos. Les marevelloses il·lustracions que van de la mà del text són a càrrec de l'Arnau Solà Vila.</p>
-<p>Agrairem que envïin a izeland.com@gmail.com qualsevol tipus de comentari.</p>
+<p>Mat Maths ha estat ideat per en Xavi Juez, qui també n'ha elaborat els textos. Les il·lustracions són a càrrec de l'Arnau Solà Vila.</p>
+<br></br>
+<p>Agrairem que envïin a <b>izeland.com@gmail.com</b> qualsevol tipus de comentari.</p>
 
     </td>
     </tr>
