--- a/cat/info.html
+++ b/cat/info.html
@@ -8,7 +8,7 @@
   
       
     <h1 style="text-align:center">
-        Mat Maths - Aventures a Izeland
+        Mat Maths ~ Aventures a Izeland
     </h1>
     <h2 style="text-align:center">
         Propòsit
