--- a/cat/info.html
+++ b/cat/info.html
@@ -3,8 +3,8 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
       
-    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Es</a></span>
-      <a style="color:lightgray" href="index.html">Main</a></div>
+    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Español</a></span>
+      <a style="color:lightgray" href="index.html">Inici</a></div>
   
       
     <h1 style="text-align:center">
