--- a/cat/index.html
+++ b/cat/index.html
@@ -3,7 +3,7 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
    
-    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Es</a></span>
+    <div><span style="float:right"><a style="color:lightgray" href="../index.html">Español</a></span>
       <a style="color:lightgray" href="http://izeland.com/cat/info.html">Info</a></div>
 
     <h1 style="text-align:center">
