--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
       
-    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Cat</a></span><a style="color:lightgray" href="info.html">Info</a></div>
+    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Català</a></span><a style="color:lightgray" href="info.html">Info</a></div>
       
     <h1 style="text-align:center">
         Mat Maths ~ Aventuras en Izeland
