--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
   <body style="background-color:MidnightBlue;">
     <font face ="verdana" style="color:lightgray">
       
-    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Cat</a></span>
+    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Català</a></span>
       <a style="color:lightgray" href="index.html">Inicio</a></div>
   
       
