--- a/info.html
+++ b/info.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:MidnightBlue;">
-    <font face ="verdana" style="color:lightgray">
+  <body style="background-color:darkolivegreen;">
+    <font face ="verdana" style="color:white">
       
-    <div><span style="float:right"><a style="color:lightgray" href="cat/index.html">Català</a></span>
-      <a style="color:lightgray" href="index.html">Inicio</a></div>
+    <div><span style="float:right"><a style="color:white" href="cat/index.html">Català</a></span>
+      <a style="color:white" href="index.html">Inicio</a></div>
   
       
     <h1 style="text-align:center">
